@@ -12,7 +12,7 @@ LIBS = -lgmp -lm -lmcheck
 
 CHECK_PROGRAMS = t-add t-sub t-mul t-invert t-div t-div_2exp \
 	t-double t-gcd t-lcm \
-	t-sqrt t-powm t-logops t-bitops t-scan t-str \
+	t-sqrt t-root t-powm t-logops t-bitops t-scan t-str \
 	t-reuse
 
 MISC_OBJS = hex-random.o mini-random.o mini-gmp.o
